--- a/create_paths.html
+++ b/create_paths.html
@@ -2,5 +2,6 @@
 <html>
     <head>
         <title>Create Paths</title>
+        <script src="https://cdn.tailwindcss.com"></script>
     </head>
 </html>
