--- a/list_paths.html
+++ b/list_paths.html
@@ -2,5 +2,6 @@
 <html>
     <head>
         <title>List Path</title>
+        <script src="https://cdn.tailwindcss.com"></script>
     </head>
 </html>
