--- a/view_paths.html
+++ b/view_paths.html
@@ -2,5 +2,6 @@
 <html>
     <head>
         <title>View Paths</title>
+        <script src="https://cdn.tailwindcss.com"></script>
     </head>
 </html>
