--- a/list_paths.html
+++ b/list_paths.html
@@ -4,4 +4,17 @@
         <title>List Path</title>
         <script src="https://cdn.tailwindcss.com"></script>
     </head>
+    <body>
+        <div class="mx-auto m-16">
+            <h1 class="text-3xl text-center">LIST PATHS</h1>
+            <p class="text-center m-2">Click on any path to view instructions</p>
+        </div>
+
+        <div id="path_list" class="mx-auto w-fit">
+            <div class="p-4 bg-gray-500 rounded w-96">
+                <h2>Name of path</h2>
+                <p>Instructions stored: 5</p>
+            </div>
+        </div>
+    </body>
 </html>
