--- a/index.html
+++ b/index.html
@@ -4,4 +4,9 @@
         <title>Home</title>
         <script src="https://cdn.tailwindcss.com"></script>
     </head>
+    <body>
+        <h1 class="text-3xl text-center m-16">WTH 2023</h1>
+        <a href="create_paths.html"><h2 class="cursor-pointer text-2xl bg-gray-500 rounded w-60 text-center m-4 p-4 mx-auto">Create New Path</h2></a>
+        <a href="list_paths.html"><h2 class="cursor-pointer text-2xl bg-gray-500 rounded w-60 text-center m-4 p-4 mx-auto">View Paths</h2></a>
+    </body>
 </html>
