--- a/view_paths.html
+++ b/view_paths.html
@@ -4,4 +4,19 @@
         <title>View Paths</title>
         <script src="https://cdn.tailwindcss.com"></script>
     </head>
+    <body>
+        <div class="mx-auto m-16">
+            <h1 class="text-3xl text-center">VIEW PATHS</h1>
+            <p class="text-center m-2">Name of path: Hello</p>
+            <p class="text-center m-2">Instruction: 0</p>
+        </div>
+
+        <a href="/"><div class="mx-auto w-fit m-6 cursor-pointer">
+            <h2 class="text-1xl flex mx-1/2"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 mr-1">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M10.5 19.5L3 12m0 0l7.5-7.5M3 12h18" />
+              </svg>
+              
+               Go Back</h2>
+        </div></a>
+    </body>
 </html>
