--- a/list_paths.html
+++ b/list_paths.html
@@ -16,5 +16,13 @@
                 <p>Instructions stored: 5</p>
             </div>
         </div>
+        
+        <a href="/"><div class="mx-auto w-fit m-6 cursor-pointer">
+            <h2 class="text-1xl flex mx-1/2"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 mr-1">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M10.5 19.5L3 12m0 0l7.5-7.5M3 12h18" />
+              </svg>
+              
+               Go Back</h2>
+        </div></a>
     </body>
 </html>
