added list paths

--- a/create_paths.html
+++ b/create_paths.html
@@ -16,15 +16,16 @@
         </div>
 
         <h1 class="text-2xl text-center mt-16">Instructions</h1>
+
         <div id="item_list" class="w-fit mx-auto">
-            <div id="list_item" class="rounded bg-gray-500 p-5 flex m-4">
+            <div id="item_list" class="rounded bg-gray-500 p-5 flex m-4">
                 <div class="m-5">
                     <h3>Directions</h3>
-                    <input id="direction_data" type="text"></input>
+                    <input class="direction_data" type="text"></input>
                 </div>
                 <div class="m-5">
                     <h3>Steps</h3>
-                    <input id="steps_data" type="text"></input>
+                    <input class="steps_data" type="text"></input>
                 </div>
             </div>
         </div>
