fetech data from path to view

--- a/view_paths.html
+++ b/view_paths.html
@@ -7,8 +7,8 @@
     <body>
         <div class="mx-auto m-16">
             <h1 class="text-3xl text-center">VIEW PATHS</h1>
-            <p class="text-center m-2">Name of path: Hello</p>
-            <p class="text-center m-2">Instruction: 0</p>
+            <p id="path_name" class="text-center m-2">Name of path: </p>
+            <p id="ip" class="text-center m-2">Instruction: []</p>
         </div>
 
         <a href="/"><div class="mx-auto w-fit m-6 cursor-pointer">
@@ -18,5 +18,7 @@
               
                Go Back</h2>
         </div></a>
+
+        <script src="./js/view_paths.js"></script>
     </body>
 </html>
