--- a/view_paths.html
+++ b/view_paths.html
@@ -11,6 +11,8 @@
             <p id="ip" class="text-center m-2">Instruction: []</p>
         </div>
 
+        <h2 onclick="play_next()" class="cursor-pointer mb-16 text-1xl bg-gray-500 rounded w-60 text-center m-4 p-4 mx-auto">NEXT</h2>
+
         <a href="/"><div class="mx-auto w-fit m-6 cursor-pointer">
             <h2 class="text-1xl flex mx-1/2"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 mr-1">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M10.5 19.5L3 12m0 0l7.5-7.5M3 12h18" />
