--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
         <title>Home</title>
         <script src="https://cdn.tailwindcss.com"></script>
     </head>
-    <body>
-        <h1 class="text-3xl text-center m-16">WTH 2023 - NaviGo</h1>
-        <a href="create_paths.html"><h2 class="cursor-pointer text-2xl bg-gray-500 rounded w-60 text-center m-4 p-4 mx-auto">Create New Path</h2></a>
-        <a href="list_paths.html"><h2 class="cursor-pointer text-2xl bg-gray-500 rounded w-60 text-center m-4 p-4 mx-auto">View Paths</h2></a>
+    <body class="md:px-96 bg-[radial-gradient(ellipse_at_right,_var(--tw-gradient-stops))] from-sky-400 to-indigo-900">
+        <div class="py-10 pb-8 px-8 rounded bg-white drop-shadow my-10">
+            <div class="mx-auto m-16">
+                <h1 class="text-3xl text-center">WTH2023 - NaviGo</h1>
+                <p class="text-center m-2">Confidence to navigate on the go</p>
+            </div>
+    
+            <a href="create_paths.html"><h2 class="cursor-pointer text-2xl bg-gray-300 rounded w-60 text-center m-4 p-4 mx-auto">Create New Path</h2></a>
+            <a href="list_paths.html"><h2 class="cursor-pointer text-2xl bg-gray-300 rounded w-60 text-center m-4 p-4 mx-auto">View Paths</h2></a>
+        </div>
     </body>
 </html>
