added more icons

--- a/create_paths.html
+++ b/create_paths.html
@@ -15,7 +15,7 @@
             <div class="w-fit">
                 <div class="rounded bg-gray-300 px-5 mt-4  flex">
                     <div class="py-5 flex">
-                        <h3 class="mr-5">Name</h3>
+                        <h3 class="mr-5">Path Name</h3>
                         <input id="path_name_data" class="rounded" type="text"></input>
                     </div>
                 </div>
@@ -46,7 +46,7 @@
                   </svg>
                    Add new instruction</h2>
             </div>
-            <h2 onclick="submit_new_path()" class="cursor-pointer mt-16 text-1xl bg-gray-300 rounded w-48  my-2 mb-16 p-2 w-fit">CONFIRM PATH</h2>
+            <h2 onclick="submit_new_path()" class="cursor-pointer mt-16 text-1xl bg-gray-300 rounded my-2 mb-16 p-2 w-fit px-10">CONFIRM PATH</h2>
     
             <a href="/"><div class="mx-auto w-fit m-6 cursor-pointer">
                 <h2 class="text-1xl flex mx-1/2"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 mr-1">
