--- a/index.html
+++ b/index.html
@@ -7,12 +7,22 @@
     <body class="md:px-96 bg-[radial-gradient(ellipse_at_right,_var(--tw-gradient-stops))] from-sky-400 to-indigo-900">
         <div class="py-10 pb-8 px-8 rounded bg-white drop-shadow my-10">
             <div class="mx-auto m-16">
-                <h1 class="text-3xl text-center">WTH2023 - NaviGo</h1>
-                <p class="text-center m-2">Confidence to navigate on the go</p>
+                <h1 class="text-3xl text-center ">WTH2023 - NaviGo</h1>
+                <div class="mx-auto w-fit my-5">
+                    <p class="text-center m-2 flex"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 mr-2">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M15 10.5a3 3 0 11-6 0 3 3 0 016 0z" />
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 10.5c0 7.142-7.5 11.25-7.5 11.25S4.5 17.642 4.5 10.5a7.5 7.5 0 1115 0z" />
+                      </svg>
+                       Navigate your way with confidence</p>
+                </div>
             </div>
     
             <a href="create_paths.html"><h2 class="cursor-pointer text-2xl bg-gray-300 rounded w-60 text-center m-4 p-4 mx-auto">Create New Path</h2></a>
             <a href="list_paths.html"><h2 class="cursor-pointer text-2xl bg-gray-300 rounded w-60 text-center m-4 p-4 mx-auto">View Paths</h2></a>
+
+            <a href="https://github.com/Mini-Ware/WTH2023">
+                <p class="text-center mt-16 mb-5 text-gray-500">Learn More</p>
+            </a>
         </div>
     </body>
 </html>
