--- a/view_paths.html
+++ b/view_paths.html
@@ -13,8 +13,8 @@
 
             <h1 class="text-2xl  mt-16">Path Details</h1>
             <div id="path_item" class="p-4 bg-gray-300 rounded w-96 my-2 cursor-pointer ">
-                <p id="path_name" class="m-2">Name: </p>
-                <p id="ip" class="m-2">Instruction: []</p>
+                <p id="path_name" class="m-2 flex">Name: </p>
+                <p id="ip" class="m-2 flex">Instruction: []</p>
             </div>
     
             <h2 onclick="play_next()" class="cursor-pointer mb-16 text-1xl bg-gray-300 rounded w-fit  my-4 mt-8 p-2 px-10 ">NEXT</h2>
