improve mobile ui

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Home</title>
         <script src="https://cdn.tailwindcss.com"></script>
     </head>
-    <body class="md:px-96 bg-[radial-gradient(ellipse_at_right,_var(--tw-gradient-stops))] from-sky-400 to-indigo-900">
+    <body class="px-4 md:px-96 bg-gradient-to-r from-green-300 via-blue-500 to-purple-600">
         <div class="py-10 pb-8 px-8 rounded bg-white drop-shadow my-10">
             <div class="mx-auto m-16">
                 <h1 class="text-3xl text-center ">WTH2023 - NaviGo</h1>
