--- a/view_paths.html
+++ b/view_paths.html
@@ -4,7 +4,7 @@
         <title>View Paths</title>
         <script src="https://cdn.tailwindcss.com"></script>
     </head>
-    <body class="md:px-96 bg-[radial-gradient(ellipse_at_right,_var(--tw-gradient-stops))] from-sky-400 to-indigo-900">
+    <body class="px-4 md:px-96 bg-gradient-to-r from-green-300 via-blue-500 to-purple-600">
         <div class="py-2 pb-8 px-8 rounded bg-white drop-shadow my-10">
             <div class="mx-auto my-10">
                 <h1 class="text-3xl ">VIEW PATHS</h1>
@@ -17,7 +17,7 @@
                 <p id="ip" class="m-2 flex">Instruction: []</p>
             </div>
     
-            <h2 onclick="play_next()" class="cursor-pointer mb-16 text-1xl bg-gray-300 rounded w-fit  my-4 mt-8 p-2 px-10 ">NEXT</h2>
+            <h2 id="play_button" onclick="play_next()" class="cursor-pointer mb-16 text-1xl bg-gray-300 rounded w-fit  my-4 mt-8 p-2 px-10 ">NEXT</h2>
     
             <a href="/"><div class="mx-auto w-fit m-6 cursor-pointer">
                 <h2 class="text-1xl flex mx-1/2"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 mr-1">
