--- a/view_paths.html
+++ b/view_paths.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>View Paths</title>
+        <title>NaviGo - View Paths</title>
         <script src="https://cdn.tailwindcss.com"></script>
     </head>
     <body class="px-4 md:px-96 bg-gradient-to-r from-green-300 via-blue-500 to-purple-600">
