--- a/create_paths.html
+++ b/create_paths.html
@@ -4,7 +4,7 @@
         <title>NaviGo - Create Paths</title>
         <script src="https://cdn.tailwindcss.com"></script>
     </head>
-    <body class="px-4 md:px-96 bg-gradient-to-r from-green-300 via-blue-500 to-purple-600">
+    <body class="px-4 sm:px-96 bg-gradient-to-r from-green-300 via-blue-500 to-purple-600">
         <div class="py-2 px-8 rounded bg-white drop-shadow my-10">
             <div class="my-10">
                 <h1 class="text-3xl ">CREATE PATHS</h1>
@@ -12,17 +12,17 @@
             </div>
     
             <h1 class="text-2xl  mt-16">Basic Setup</h1>
-            <div class="w-fit">
+            <div class="sm:w-fit w-full">
                 <div class="rounded bg-gray-300 px-5 mt-4  flex">
                     <div class="py-5 flex">
                         <h3 class="mr-5">Path Name</h3>
-                        <input required id="path_name_data" class="rounded" type="text"></input>
+                        <input required id="path_name_data" class="rounded w-32" type="text"></input>
                     </div>
                 </div>
             </div>
     
             <h1 class="text-2xl  mt-16">Instructions</h1>
-            <div id="item_list" class="w-fit">
+            <div id="item_list" class="sm:w-fit w-full">
                 <div id="item_list" class="rounded bg-gray-300 py-2 flex my-4">
                     <div class="m-5">
                         <h3 class="flex"><!-- <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5 m-1">
@@ -42,7 +42,7 @@
                             <path stroke-linecap="round" stroke-linejoin="round" d="M12 6v6h4.5m4.5 0a9 9 0 11-18 0 9 9 0 0118 0z" />
                           </svg> -->
                            Steps</h3>
-                        <input required class="steps_data rounded my-2" type="number"></input>
+                        <input required class="steps_data rounded my-2 w-16" type="number"></input>
                     </div>
                 </div>
             </div>
