--- a/view_paths.html
+++ b/view_paths.html
@@ -4,7 +4,7 @@
         <title>NaviGo - View Paths</title>
         <script src="https://cdn.tailwindcss.com"></script>
     </head>
-    <body class="px-4 md:px-96 bg-gradient-to-r from-green-300 via-blue-500 to-purple-600">
+    <body class="px-4 sm:px-96 bg-gradient-to-r from-green-300 via-blue-500 to-purple-600">
         <div class="py-2 pb-8 px-8 rounded bg-white drop-shadow my-10">
             <div class="mx-auto my-10">
                 <h1 class="text-3xl ">VIEW PATHS</h1>
@@ -12,7 +12,7 @@
             </div>
 
             <h1 class="text-2xl  mt-16">Path Details</h1>
-            <div id="path_item" class="p-4 bg-gray-300 rounded w-96 my-2 cursor-pointer ">
+            <div id="path_item" class="p-4 bg-gray-300 rounded w-full sm:w-96 my-2 cursor-pointer ">
                 <p id="path_name" class="m-2 flex">Name: </p>
                 <p id="ip" class="m-2 flex">Instruction: []</p>
             </div>
