--- a/list_paths.html
+++ b/list_paths.html
@@ -14,11 +14,11 @@
             <div id="path_list_copy" class="mx-auto w-fit hidden">
                 <div id="path_item" class="p-4 bg-gray-300 rounded w-full sm:w-96 my-2 cursor-pointer flex">
                     <div>
-                        <h2>Name of path</h2>
-                        <p>Instructions stored: 5</p>
+                        <h2 class="w-fit">Name of path</h2>
+                        <p class="w-fit">Instructions stored: 5</p>
                     </div>
 
-                    <a class=" ml-auto my-2">
+                    <a id="trash_bin" onclick="localStorage.removeItem(this.id);window.open('list_paths.html','_self')" class=" ml-auto my-2">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0" />
                           </svg>   
