--- a/list_paths.html
+++ b/list_paths.html
@@ -39,6 +39,6 @@
             </div></a>
         </div>
 
-        <script src="./js/list_paths.js"/>
+        <script src="./js/list_paths.js"></script>
     </body>
 </html>
