--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
     <head>
         <title>NaviGo - Home</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="https://cdn.tailwindcss.com"></script>
     </head>
-    <body class="px-4 sm:px-96 bg-gradient-to-r from-green-300 via-blue-500 to-purple-600">
+    <body class="px-4 md:px-96 bg-gradient-to-r from-green-300 via-blue-500 to-purple-600">
         <div class="py-10 pb-8 px-8 rounded bg-white drop-shadow my-10">
             <div class="mx-auto m-16">
                 <h1 class="text-3xl text-center ">WTH2023 - NaviGo</h1>
