--- a/view_paths.html
+++ b/view_paths.html
@@ -2,9 +2,10 @@
 <html>
     <head>
         <title>NaviGo - View Paths</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="https://cdn.tailwindcss.com"></script>
     </head>
-    <body class="px-4 sm:px-96 bg-gradient-to-r from-green-300 via-blue-500 to-purple-600">
+    <body class="px-4 md:px-96 bg-gradient-to-r from-green-300 via-blue-500 to-purple-600">
         <div class="py-2 pb-8 px-8 rounded bg-white drop-shadow my-10">
             <div class="mx-auto my-10">
                 <h1 class="text-3xl ">VIEW PATHS</h1>
