make list of path box better on mobile

--- a/list_paths.html
+++ b/list_paths.html
@@ -28,7 +28,7 @@
             </div>
     
             <h1 class="text-2xl  mt-16">Recorded</h1>
-            <div id="path_list" class="w-fit mb-20">
+            <div id="path_list" class="w-full mb-20">
             </div>
     
             <a href="/"><div class="mx-auto w-fit m-6 cursor-pointer">
